overflow fix

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -60,6 +60,9 @@
 /* Small phones to small tablets: from 481px to 767px */
 
 @media only screen and (max-width: 767px) {
+  html, body {
+    overflow-x: hidden !important;
+  }
   body {
     font-size: 16px;
   }
